tests/baselines/reference/duplicateTypeParameters1.errors.txt
//// [tests/cases/compiler/duplicateTypeParameters1.ts] ////

duplicateTypeParameters1.ts(1,15): error TS2300: Duplicate identifier 'X'.


==== duplicateTypeParameters1.ts (1 errors) ====
    function A<X, X>() { }
                  ~
!!! error TS2300: Duplicate identifier 'X'.
    